corrected siteplan menu on mobile

--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -14,4 +14,8 @@
     header h3 {
         padding-left: 5px;
     }
+    header ul {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(50px, auto));
+    }
 }
